REGRESSION(r290815): Fix even more incorrect #if ENABLE(SERVICE_WORKER) usage in NetworkProcess https://bugs.webkit.org/show_bug.cgi?id=237461

Unreviewed build fix.


* NetworkProcess/NetworkProcess.cpp:
The existence of NetworkProcess::{getPendingPushMessages, processPushMessages} depend on ENABLE(SERVICE_WORKER);
it is only when they exist that their implementation depends on ENABLE(BUILT_IN_NOTIFICATIONS).



Canonical link: https://commits.webkit.org/248053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290817 268f45cc-cd09-0410-ab3c-d52691b4dbfc